--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,7 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <exec.mainClass>pim.estufapim.Main</exec.mainClass>
-    </properties>
-    
-    
+    </properties>  
     <dependencies>
         <dependency>
             <groupId>org.hibernate</groupId>
@@ -34,7 +32,10 @@
             <artifactId>AbsoluteLayout</artifactId>
             <version>RELEASE180</version>
         </dependency>
-    </dependencies>
-
-    
+        <dependency>
+            <groupId>com.formdev</groupId>
+            <artifactId>flatlaf</artifactId>
+            <version>3.5.1</version>
+        </dependency>
+    </dependencies>   
 </project>
